Se agrega la estructura base del documento HTML y el CSS reset.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 
 <head>
-    <title>GamerCity: ¡Ven a jugar!</title>
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico" />
     <meta charset="utf-8" />
+    <title>GamerCity: ¡Ven a jugar!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="images/icon.png" />
+    <link rel="stylesheet" href="master.css" />
+    <script src="script.js"></script>
 </head>
 
-<body></body>
+<body>
+    <header>
+        <h1>GamerCity</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="#">Productos</a></li>
+            <li><a href="#">Comunidad</a></li>
+            <li><a href="#">Sobre nosotros</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </nav>
+
+    <section>
+        <article>
+            <header>
+                <h2>Nintendo Switch</h2>
+            </header>
+
+            <figure>
+                <img src="https://images.pexels.com/photos/371924/pexels-photo-371924.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+            </figure>
+
+            <footer>
+                <p></p>
+
+                <label class="precio"></label>
+            </footer>
+        </article>
+    </section>
+
+    <footer>
+
+        <small>
+            Derechos reservados. &copy;
+        </small>
+
+        <figure>
+
+        </figure>
+    </footer>
+
+</body>
 
 </html>
