Se agregaron muchos nuevos cambios al HTML y se actualizo el master.css por un css reset mas actualizado.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
-    <header>
+    <header id="main_header">
         <h1>GamerCity</h1>
+        <figure id="main_figure">
+            <img id="logo" src="images/logo.png" alt="Logo principal de la tienda" />
+        </figure>
     </header>
 
     <nav>
