Finalizacion del diseño. Probablemente será utilizado en otro proyecto más adelante.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="images/icon.png" />
     <link rel="stylesheet" href="master.css" />
-    <script src="script.js"></script>
 </head>
 
 <body>
@@ -40,139 +39,57 @@
             </figure>
 
             <footer>
-                <p>JAJAJAJ</p>
-
-                <label class="precio"></label>
+                <p>
+                    Es la novena consola de videojuegos principal desarrollada por Nintendo. Conocida en el desarrollo por su nombre código «NX», se dio a conocer en octubre de 2016 y fue lanzada mundialmente el 3 de marzo de 2017
+                </p>
             </footer>
+
+            <div id="btnComprar">
+                <button>Comprar</button>
+            </div>
         </article>
 
         <article>
             <header>
-                <h2>Nintendo Switch</h2>
+                <h2>Super Nintendo</h2>
             </header>
 
             <figure>
-                <img src="https://images.pexels.com/photos/371924/pexels-photo-371924.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+                <img src="https://images.pexels.com/photos/776092/pexels-photo-776092.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
             </figure>
 
             <footer>
-                <p></p>
-
-                <label class="precio"></label>
+                <p>
+                    Es la novena consola de videojuegos principal desarrollada por Nintendo. Conocida en el desarrollo por su nombre código «NX», se dio a conocer en octubre de 2016 y fue lanzada mundialmente el 3 de marzo de 2017
+                </p>
             </footer>
+
+            <div id="btnComprar">
+                <button>Comprar</button>
+            </div>
         </article>
 
         <article>
             <header>
-                <h2>Nintendo Switch</h2>
+                <h2>Figuras de acci&oacute;n de Nintendo</h2>
             </header>
 
             <figure>
-                <img src="https://images.pexels.com/photos/371924/pexels-photo-371924.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+                <img src="https://images.pexels.com/photos/163077/mario-yoschi-figures-funny-163077.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
             </figure>
 
             <footer>
-                <p></p>
-
-                <label class="precio"></label>
+                <p>
+                    Es la novena consola de videojuegos principal desarrollada por Nintendo. Conocida en el desarrollo por su nombre código «NX», se dio a conocer en octubre de 2016 y fue lanzada mundialmente el 3 de marzo de 2017
+                </p>
             </footer>
+
+            <div id="btnComprar">
+                <button>Comprar</button>
+            </div>
         </article>
 
-        <article>
-            <header>
-                <h2>Nintendo Switch</h2>
-            </header>
 
-            <figure>
-                <img src="https://images.pexels.com/photos/371924/pexels-photo-371924.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-            </figure>
-
-            <footer>
-                <p></p>
-
-                <label class="precio"></label>
-            </footer>
-        </article>
-
-        <article>
-            <header>
-                <h2>Nintendo Switch</h2>
-            </header>
-
-            <figure>
-                <img src="https://images.pexels.com/photos/371924/pexels-photo-371924.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-            </figure>
-
-            <footer>
-                <p></p>
-
-                <label class="precio"></label>
-            </footer>
-        </article>
-
-        <article>
-            <header>
-                <h2>Nintendo Switch</h2>
-            </header>
-
-            <figure>
-                <img src="https://images.pexels.com/photos/371924/pexels-photo-371924.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-            </figure>
-
-            <footer>
-                <p></p>
-
-                <label class="precio"></label>
-            </footer>
-        </article>
-
-        <article>
-            <header>
-                <h2>Nintendo Switch</h2>
-            </header>
-
-            <figure>
-                <img src="https://images.pexels.com/photos/371924/pexels-photo-371924.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-            </figure>
-
-            <footer>
-                <p></p>
-
-                <label class="precio"></label>
-            </footer>
-        </article>
-
-        <article>
-            <header>
-                <h2>Nintendo Switch</h2>
-            </header>
-
-            <figure>
-                <img src="https://images.pexels.com/photos/371924/pexels-photo-371924.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-            </figure>
-
-            <footer>
-                <p></p>
-
-                <label class="precio"></label>
-            </footer>
-        </article>
-
-        <article>
-            <header>
-                <h2>Nintendo Switch</h2>
-            </header>
-
-            <figure>
-                <img src="https://images.pexels.com/photos/371924/pexels-photo-371924.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
-            </figure>
-
-            <footer>
-                <p></p>
-
-                <label class="precio"></label>
-            </footer>
-        </article>
     </section>
 
     <footer id="main_footer">
